fixes spacing issues on teaching course cards

--- a/myuw/static/css/course_card.less
+++ b/myuw/static/css/course_card.less
@@ -100,6 +100,7 @@ c8a #473EC5;
         vertical-align: top;
 
         &:last-child { padding-right: 0; }
+        &.meeting-dates { padding-right: 16px; }
         &.course-final-date { width: 7.5em; }
         &.course-days { text-align:left; padding-right: 20px}
         &.course-section {
@@ -129,6 +130,7 @@ c8a #473EC5;
                 color: #777;
             }
         }
+        &.course-loc-tbd {  }
         &.course-enrollment {
             width: 6em;
             text-align: right;
